PIC-2560 note validation poc

--- a/server/views/components/hearing-notes/template.njk
+++ b/server/views/components/hearing-notes/template.njk
@@ -21,7 +21,7 @@
         </table>
     </div>
 
-    <form id="save-notes-{{ params.hearing.hearingId }}" action="summary/notes" method="post">
+    <form id="save-notes-{{ params.hearing.hearingId }}" class="comments-form-tag" action="summary/notes" method="post">
 
         <details class="govuk-details govuk-!-margin-bottom-0" data-module="govuk-details">
             <summary class="govuk-details__summary govuk-!-margin-bottom-0 govuk-!-margin-top-2">
