--- a/server/views/court-case-comments.njk
+++ b/server/views/court-case-comments.njk
@@ -25,7 +25,7 @@
                     These comments will not be saved to NDelius.
                 </p>
             </div>
-            <form method="post" action="summary/comments">
+            <form method="post" id="case-comment-form" class="comments-form-tag" action="summary/comments">
                 <textarea class="govuk-textarea"
                           id="comment" name="comment" rows="5" aria-labelledby="comments-hint"></textarea>
                 <button type="submit" id="save-comments" class="govuk-button case-comments-save-button"
