--- a/server/views/court-case-progress.njk
+++ b/server/views/court-case-progress.njk
@@ -1,3 +1,6 @@
+{% block javascripts %}
+    <script type="text/javascript" src="/javascripts/case-progess.js"/>
+{% endblock %}
 <div class="govuk-grid-row" id="caseProgressComponent">
     <div class="govuk-grid-column-two-thirds">
         <h2 class="govuk-heading-m" id="caseHearingsHeading">Case progress</h2>
