--- a/public/stylesheets/app/_comments-form-tag.scss
+++ b/public/stylesheets/app/_comments-form-tag.scss
@@ -9,7 +9,7 @@ body{
   height: 100%;
   background: linear-gradient(rgba(0, 0, 0, 0.6),rgba(0, 0, 0, 0.6));
 }
-.popup-grid{
+.popup-grid {
   background-color: #fff;
   display: block;
   margin-left: auto;
@@ -18,8 +18,17 @@ body{
   width: 60%;
 }
 /* popup toggle class */
-.togglePopup{
-  display: none;
+.togglePopup {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
 /* popup content */
 .popup-content{
