PIC-2560: Adjust sizing of the modal

--- a/server/views/court-case-progress.njk
+++ b/server/views/court-case-progress.njk
@@ -4,7 +4,7 @@
 
         <div id="popup-wrapper" class="popup-toggle">
             <div class ="popup-modal">
-                <div class ="govuk-!-text-align-left govuk-!-padding-left-3 govuk-!-padding-top-2">
+                <div class ="govuk-!-text-align-left govuk-!-padding-left-3 govuk-!-padding-top-2 govuk-!-padding-right-3">
                     <div class="govuk-warning-text govuk-!-margin-bottom-1">
                         <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
                         <strong class="govuk-warning-text__text">
@@ -13,7 +13,7 @@
                         </strong>
                     </div>
                     <p class="govuk-body-s govuk-!-margin-bottom-9">Save your notes before adding a new one.</p>
-                    <button type="button" id="close-btn" class="govuk-button" data-module="govuk-button">Go back</button>
+                    <button type="button" id="close-btn" class="govuk-button govuk-!-padding-right-3" data-module="govuk-button">Go back</button>
                 </div>
             </div>
         </div>
