--- a/server/views/court-case-progress.njk
+++ b/server/views/court-case-progress.njk
@@ -75,6 +75,6 @@
         {% endif %}
     </div>
 </div>
-{% block javascripts %}
-    <script type="text/javascript" src="/javascripts/case-progress.js"></script>
-{% endblock %}
+{#{% block javascripts %}#}
+{#    <script type="text/javascript" src="/javascripts/case-progress.js"></script>#}
+{#{% endblock %}#}
