PIC-2560 check drafts on keypress

--- a/server/views/court-case-comments.njk
+++ b/server/views/court-case-comments.njk
@@ -26,7 +26,7 @@
                 </p>
             </div>
             <form method="post" id="case-comment-form" class="comments-form-tag" action="summary/comments">
-                <textarea class="govuk-textarea"
+                <textarea class="govuk-textarea case-notes"
                           id="comment" name="comment" rows="5" aria-labelledby="comments-hint"></textarea>
                 <button type="submit" id="save-comments" class="govuk-button case-comments-save-button"
                         data-module="govuk-button">Save
