PIC-2560: Alert users when they will lose a comment or note (#697)
* PIC-2554: 💄 Top padding of Add a note section on the case progress component is missing

* PIC-2560 note validation poc

* PIC-2560 note validation poc

* PIC-2560: Correct spelling to trigger the popup

* PIC-2560: Implementing the modal logic

* PIC-2560 fix popup

* PIC-2560: Refactoring modal popup

* PIC-2560: Adjust sizing of the modal

* PIC-2560: ✅ Add testing for modal box

* PIC-2560: Change the behaviour of the form to be reactive when a key is pressed rather than the save button

* PIC-2560: Update BDD

* PIC-2560 check drafts on keypress

* PIC-2560: Refactor modal

* PIC-2560: ✅ Modal tests are passing

* PIC-2560: Implementing code review changes

Co-authored-by: Sarahyjja <sarahyjja@github.com>

--- a/server/views/case-summary.njk
+++ b/server/views/case-summary.njk
@@ -18,6 +18,12 @@
     </div>
 {% endset %}
 
+{% block javascripts %}
+    {{ super() }}
+    <script type="text/javascript" src="/javascripts/case-progress-{{ appVersion }}.min.js"/>
+{% endblock %}
+
+
 {% block message %}
     {%- from "components/match-confirmation/macro.njk" import pacMatchConfirmation -%}
     {{ pacMatchConfirmation({
