--- a/server/views/court-case-comments.njk
+++ b/server/views/court-case-comments.njk
@@ -25,8 +25,8 @@
                     These comments will not be saved to NDelius.
                 </p>
             </div>
-            <form method="post" action="summary/comments">
-                <textarea class="govuk-textarea"
+            <form method="post" id="case-comment-form" action="summary/comments">
+                <textarea class="govuk-textarea case-notes"
                           id="comment" name="comment" rows="5" aria-labelledby="comments-hint"></textarea>
                 <button type="submit" id="save-comments" class="govuk-button case-comments-save-button"
                         data-module="govuk-button">Save
