--- a/server/views/components/modal-box/template.njk
+++ b/server/views/components/modal-box/template.njk
@@ -1,14 +1,14 @@
 <div id="popup-wrapper" class="popup-toggle">
     <div class ="popup-modal">
         <div class ="govuk-!-text-align-left govuk-!-padding-left-3 govuk-!-padding-top-2 govuk-!-padding-right-3">
-            <div class="govuk-warning-text govuk-!-margin-bottom-1">
+            <div class="govuk-warning-text govuk-!-margin-bottom-1 govuk-!-padding-bottom-0">
                 <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
                 <strong class="govuk-warning-text__text">
                     <span class="govuk-warning-text__assistive">Warning</span>
-                    There are unsaved notes
+                    <h1 class="govuk-heading-m" id="modal-title-message"></h1>
                 </strong>
             </div>
-            <p class="govuk-body-s govuk-!-margin-bottom-9">Save your notes before adding a new one.</p>
+            <p class="govuk-body-s govuk-!-margin-bottom-9" id="modal-body-message"></p>
             <button type="button" id="close-btn" class="govuk-button govuk-!-padding-right-3" data-module="govuk-button">Go back</button>
         </div>
     </div>
