PIC-2653: ✨ Add Whats new page + BDD tests

--- a/server/views/partials/layout.njk
+++ b/server/views/partials/layout.njk
@@ -161,6 +161,10 @@
                  {
                     href: "/privacy-notice",
                     text: "Privacy"
+                },
+                {
+                    href: "/whats-new",
+                    text: "What's new"
                 }
             ]
         }
