--- a/server/views/case-search.njk
+++ b/server/views/case-search.njk
@@ -37,8 +37,8 @@
             { text: ('<a href="/' + params.courtCode + '/hearing/' + item.hearingId + '/defendant/' + item.defendantId + '/summary" class="pac-defendant-link govuk-!-font-weight-bold govuk-link govuk-link--no-visited-state" aria-label="' + a11yTitle + '">' + defendantFullName | escape | apostropheInName | properCase | removeTitle + '</a>' + crnDisplay ) | safe },
             { text: ('<div>' + ('<span class="moj-badge moj-badge--red pac-badge">Possible NDelius Record</span>' | safe if notMatched ) + ('<span class="moj-badge moj-badge--black pac-badge">Psr</span>' | safe if item.awaitingPsr) + ('<span class="moj-badge moj-badge--black pac-badge">Breach</span>' | safe if item.breach) + ('<span class="moj-badge moj-badge--black pac-badge">Sso</span>' | safe if item.suspendedSentenceOrder) + '</div>'+ (item.probationStatus | string | capitalize if not notMatched) + ('<span data-cy="previously-known-termination-date" class="govuk-caption-m">Order ended ' + moment(item.previouslyKnownTerminationDate, 'YYYY-MM-DD').format("D MMMM YYYY") | escape + '</span>' if item.previouslyKnownTerminationDate and item.probationStatus == 'Previously known')) | safe },
             { text: offences | join('') | safe },
-            { text: (item.lastHearingDate | caseSearchDateFormat) + "<br/>" + item.lastHearingCourt },
-            { text: (item.nextHearingDate | caseSearchDateFormat)  + "<br/>" + item.nextHearingCourt }
+            { text: (((item.lastHearingDate | caseSearchDateFormat ) + '<br/>' + item.lastHearingCourt) if item.lastHearingDate else '' )},
+            { text: (((item.nextHearingDate | caseSearchDateFormat)  + '<br/>' + item.nextHearingCourt) if item.nextHearingDate else '' )}
         ] -%}
         {{ tableData.rows.push(tableRow) }}
 
