PIC-2630 put notes behind feature flag

--- a/server/views/court-case-progress.njk
+++ b/server/views/court-case-progress.njk
@@ -45,7 +45,8 @@
                         {{ pacHearingNotes({
                             data: data,
                             hearing: hearing,
-                            currentUserUuid: currentUserUuid
+                            currentUserUuid: currentUserUuid,
+                            enableHearingNotes: features.hearingNotes
                         }) }}
                     </div>
                 {% endfor %}
