--- a/server/views/components/hearing-notes/template.njk
+++ b/server/views/components/hearing-notes/template.njk
@@ -1,26 +1,24 @@
-<div class="app-summary-card__body govuk-!-padding-top-0">
+<div class="app-summary-card__body govuk-!-padding-top-0 govuk-!-padding-right-5 govuk-!-padding-left-5">
 
-    <div class="govuk-grid-row govuk-grid-column-full">
-        <table class="govuk-table">
-            {% for previousNote in params.hearing.notes %}
-                <tr class="govuk-table__row">
-                    <td class="govuk-table__cell govuk-!-padding-top-3 govuk-!-padding-bottom-2" id="previous-note-{{ previousNote.noteId }}">
-                        <div class="govuk-grid-row">
-                            <span class="govuk-grid-column-full">{{ previousNote.note }}</span>
-                        </div>
-                        <div class="govuk-grid-row govuk-!-margin-top-2 govuk-caption-m govuk-!-font-size-16 govuk-!-margin-bottom-3">
-                            <span class="govuk-!-margin-left-3">{{ previousNote.author }} on {{ previousNote.created | caseCommentTimeFormat }}
-                                 {% if previousNote.createdByUuid === params.currentUserUuid %}
-                                    <a class="govuk-link govuk-!-margin-left-5" href="summary/notes/delete?targetHearingId={{ params.hearing.hearingId }}&noteId={{ previousNote.noteId }}">Delete</a>
-                                 {% endif %}
-                            </span>
-                        </div>
-                    </td>
-                </tr>
-            {% endfor %}
-        </table>
-    </div>
-
+    <table class="govuk-table">
+        {% for previousNote in params.hearing.notes %}
+            <tr class="govuk-table__row">
+                <td class="govuk-table__cell govuk-!-padding-top-3 govuk-!-padding-bottom-2" id="previous-note-{{ previousNote.noteId }}">
+                    <div class="govuk-grid-row">
+                        <span class="govuk-grid-column-full">{{ previousNote.note }}</span>
+                    </div>
+                    <div class="govuk-grid-row govuk-!-margin-top-2 govuk-caption-m govuk-!-font-size-16 govuk-!-margin-bottom-3">
+                        <span class="govuk-!-margin-left-3">{{ previousNote.author }} on {{ previousNote.created | caseCommentTimeFormat }}
+                             {% if previousNote.createdByUuid === params.currentUserUuid %}
+                                <a class="govuk-link govuk-!-margin-left-5" href="summary/notes/delete?targetHearingId={{ params.hearing.hearingId }}&noteId={{ previousNote.noteId }}">Delete</a>
+                             {% endif %}
+                        </span>
+                    </div>
+                </td>
+            </tr>
+        {% endfor %}
+    </table>
+    {% if params.enableHearingNotes %}
     <form id="save-notes-{{ params.hearing.hearingId }}" action="summary/notes" method="post">
 
         <details class="govuk-details govuk-!-margin-bottom-0" data-module="govuk-details">
@@ -32,8 +30,8 @@
                 <textarea class="govuk-textarea case-notes" id="note-box-{{ params.hearing.hearingId }}" name="note" rows="5" aria-describedby="note-box"></textarea>
                 <button class="govuk-button case-comments-save-button" type="submit" data-module="govuk-button">Save</button>
                 <input type="hidden" name="hearingId" value="{{ params.hearing.hearingId }}"/>
-
             </div>
         </details>
     </form>
+    {% endif %}
 </div>
