PIC-2653: increase spacing between release content bullets

--- a/server/views/whats-new.njk
+++ b/server/views/whats-new.njk
@@ -23,10 +23,10 @@
             <h2 class="govuk-heading-m">View cases in the past and see a case history</h2>
 
             <ul class="govuk-list govuk-list--bullet">
-                <li>View case lists 6 working days in the past
+                <li>View case lists 6 working days in the past<br/>
                     Up to now you have been able to see case lists 6 days in the future to help you prepare cases in advance. Now you will be able to go backwards to see cases from the past to check results from recently heard cases.
                 </li>
-                <li>See the progress of a case in a case history
+                <li>See the progress of a case in a case history<br/>
                     See all of the hearings that have taken place for each case and when the next hearing is scheduled for.
                 </li>
             </ul>
@@ -37,7 +37,7 @@
 
             <p class="govuk-body">If you see any problems with the new features, post them in the <a class="govuk-link" href="https://teams.microsoft.com/dl/launcher/launcher.html?url=%2F_%23%2Fl%2Fchannel%2F19%3A8f91039f983642a3a704091dd1eb5b3f%40thread.tacv2%2FFeedback%2520and%2520queries%3FgroupId%3D11fe98ab-bd31-44aa-ab95-8ab68808964a%26tenantId%3Dc6874728-71e6-41fe-a9e1-2e8c36776ad8&type=channel&deeplinkId=673449c9-e109-4138-95fb-020f2ad590d8&directDl=true&msLaunch=true&enableMobilePage=true&suppressPrompt=true">feedback Teams channel</a> and we will investigate.</p>
 
-            <p class="govuk-body pac-secondary-text">Last updated: 13 December 2022</p>
+            <p class="govuk-body pac-secondary-text">Last updated: 7 February 2023</p>
         </div>
     </div>
 {% endblock %}
