PIC-2653 update what's new content

--- a/server/views/whats-new.njk
+++ b/server/views/whats-new.njk
@@ -20,7 +20,9 @@
             <h1 class="govuk-heading-l">What's new</h1>
             <p class="govuk-body">The latest updates and improvements to Prepare a case for sentence.</p>
 
-            <h2 class="govuk-heading-m">View cases in the past and see a case history</h2>
+            <h1 class="govuk-heading-m">7 February 2023</h1>
+
+            <h2 class="govuk-heading-s">View cases in the past and see a case history</h2>
 
             <ul class="govuk-list govuk-list--bullet">
                 <li>View case lists 6 working days in the past<br/>
@@ -31,11 +33,37 @@
                 </li>
             </ul>
 
-            <p class="govuk-body">If a case has hearings from before 10 October 2022 then they will not be visible in the case history. Hearings since 10 October and all future cases will appear in the case history.</p>
-
             <p class="govuk-body">The type of hearing, for example sentencing, plea or first hearing will only be listed for Common Platform cases. For Libra cases the hearings will be numbered not labelled with a hearing type.</p>
 
             <p class="govuk-body">If you see any problems with the new features, post them in the <a class="govuk-link" href="https://teams.microsoft.com/dl/launcher/launcher.html?url=%2F_%23%2Fl%2Fchannel%2F19%3A8f91039f983642a3a704091dd1eb5b3f%40thread.tacv2%2FFeedback%2520and%2520queries%3FgroupId%3D11fe98ab-bd31-44aa-ab95-8ab68808964a%26tenantId%3Dc6874728-71e6-41fe-a9e1-2e8c36776ad8&type=channel&deeplinkId=673449c9-e109-4138-95fb-020f2ad590d8&directDl=true&msLaunch=true&enableMobilePage=true&suppressPrompt=true">feedback Teams channel</a> and we will investigate.</p>
+
+            <h1 class="govuk-heading-m">24 January 2023</h1>
+
+            <h2 class="govuk-heading-s">Checking for missing PSR statuses</h2>
+
+            <p class="govuk-body">
+                You might have noticed that sometimes the case list shows that someone has no record even if their case has been adjourned for a PSR. This is a problem with matching the information from NDelius to our system. We are working on a solution which will be available with other improvements in March.
+            </p>
+            <p class="govuk-body">
+                Until then, if you see a no-record and the listing number is more than one then there's a chance they have a PSR and you should check.
+            </p>
+
+            <h3 class="govuk-heading-s">How to find reports in Court Diary</h3>
+
+            <p class="govuk-body">There are 2 ways to check:</p>
+            <ul class="govuk-list govuk-list--bullet">
+                <li>you can check the Court Diary for that day to see a list of all PSR reports due on a day to make sure you don’t miss any.</li>
+                <li>you can look up the defendant in NDelius to see if there is a PSR request.</li>
+            </ul>
+
+            <h3 class="govuk-heading-s">How to find reports in Court Diary</h3>
+
+            <ol class="govuk-list govuk-list--number">
+                <li>Sign into NDelius and select Court Diary from the home screen.</li>
+                <li>Select Reports from the left-hand navigation menu.</li>
+                <li>Choose the date, provider (your region) and court from the search criteria, then select the Refresh button.</li>
+                <li>You will see a table of all defendants and their reporting needs for the filtered view you selected.</li>
+            </ol>
 
             <p class="govuk-body pac-secondary-text">Last updated: 7 February 2023</p>
         </div>
