--- a/server/views/court-case-progress.njk
+++ b/server/views/court-case-progress.njk
@@ -35,9 +35,9 @@
                                         <span class="moj-badge moj-badge--blue pac-badge govuk-!-display-inline govuk-!-margin-left-3">NEXT APPEARANCE</span>
                                     {% endif %}
                                 <br/>
-                                <span class="govuk-body">
+                                <div class="govuk-body govuk-!-margin-top-1 govuk-!-margin-bottom-0">
                                     {{ hearing.hearingDateTime | hearingNoteTimeFormat }}, {{ 'Court ' if data.source === 'LIBRA' }} {{ hearing.courtRoom }}, {{ hearing.session | lower }} session, {{ hearing.court }}
-                                </span>
+                                </div>
                             </div>
                         </header>
 
