--- a/server/views/components/hearing-notes/template.njk
+++ b/server/views/components/hearing-notes/template.njk
@@ -2,17 +2,35 @@
 
     <table class="govuk-table">
         {% for previousNote in params.hearing.notes %}
-            <tr class="govuk-table__row">
+            <tr class="govuk-table__row hearing-note-container">
                 <td class="govuk-table__cell govuk-!-padding-top-3 govuk-!-padding-bottom-2" id="previous-note-{{ previousNote.noteId }}">
-                    <div class="govuk-grid-row">
-                        <span class="govuk-grid-column-full">{{ previousNote.note }}</span>
+                    <div class="hearing-note-display">
+                        <div class="govuk-grid-row">
+                            <span class="govuk-grid-column-full hearing-note-display-text">{{ previousNote.note }}</span>
+                        </div>
+                        <div class="govuk-grid-row govuk-!-margin-top-2 govuk-caption-m govuk-!-font-size-16 govuk-!-margin-bottom-3 hearing-note-links">
+                            <span class="govuk-!-margin-left-3">{{ previousNote.author }} on {{ previousNote.created | caseCommentTimeFormat }}
+    {#                             {% if previousNote.createdByUuid === params.currentUserUuid %}#}
+                                    <a class="govuk-link govuk-!-margin-left-5 note-edit-link" href="#">Edit</a>
+                                    <a class="govuk-link govuk-!-margin-left-5" href="summary/notes/delete?targetHearingId={{ params.hearing.hearingId }}&noteId={{ previousNote.noteId }}">Delete</a>
+    {#                             {% endif %}#}
+                            </span>
+                        </div>
                     </div>
-                    <div class="govuk-grid-row govuk-!-margin-top-2 govuk-caption-m govuk-!-font-size-16 govuk-!-margin-bottom-3">
-                        <span class="govuk-!-margin-left-3">{{ previousNote.author }} on {{ previousNote.created | caseCommentTimeFormat }}
-                             {% if previousNote.createdByUuid === params.currentUserUuid %}
-                                <a class="govuk-link govuk-!-margin-left-5" href="summary/notes/delete?targetHearingId={{ params.hearing.hearingId }}&noteId={{ previousNote.noteId }}">Delete</a>
-                             {% endif %}
-                        </span>
+                    <div hidden class="note-edit-container">
+                        <div class="govuk-grid-row">
+                            <div class="govuk-!-margin-right-2 govuk-!-margin-left-2">
+                                <form>
+                                    <textarea class="govuk-body govuk-textarea case-comments-comment-display case-notes-edit" rows="5">{{ previousNote.note }}</textarea>
+{#                                    <button class="govuk-button case-comments-sav#}{##}{#e-button" type="submit" data-module="govuk-button">Save</button>#}
+                                </form>
+                            </div>
+                        </div>
+                        <div class="govuk-grid-row govuk-!-margin-top-2 govuk-caption-m govuk-!-font-size-16 govuk-!-margin-bottom-3 hearing-note-edit-done">
+                            <span class="govuk-!-margin-left-3">
+                                <a class="govuk-link govuk-!-margin-left-5 note-edit-link" href="#">Done</a>
+                            </span>
+                        </div>
                     </div>
                 </td>
             </tr>
