--- a/server/views/confirm-edit-hearing-note.njk
+++ b/server/views/confirm-edit-hearing-note.njk
@@ -17,17 +17,17 @@
         <input type="hidden" name="targetHearingId" value="{{ targetHearingId }}"/>
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-two-thirds">
-                <h1 class="govuk-heading-l">Are you sure you want to delete this note?</h1>
+                <h1 class="govuk-heading-l">Edit your note</h1>
             </div>
         </div>
 
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-two-thirds">
-                <div class="confirm-delete-box scrollable-span">
+                <div class="confirm-delete-box ">
                     <span class="govuk-caption-m govuk-!-padding-bottom-5">
                         Added on the {{ created | hearingNoteTimeFormat }}
                     </span>
-                    <span class="govuk-body case-comments-comment-display">{{ note }}</span>
+                    <textarea class="govuk-body govuk-textarea case-comments-comment-display" rows="5">{{ note }}</textarea>
                 </div>
             </div>
         </div>
@@ -35,10 +35,8 @@
         <div class="govuk-grid-row govuk-!-padding-top-5">
             <div class="govuk-grid-column-one-third">
                 <div class="govuk-grid-row">
-                    <div class="govuk-grid-column-one-half govuk-!-padding-right-0">
-                        <button class="govuk-button govuk-button--warning" data-module="govuk-button" type="submit">
-                            Delete note
-                        </button>
+                    <div class="govuk-grid-column-one-third govuk-!-padding-right-0">
+                        <button class="govuk-button" type="submit" data-module="govuk-button" type="submit">Save</button>
                     </div>
                     <div class="govuk-grid-column-one-half">
                         <span class="govuk-!-font-size-19 govuk-!-display-block govuk-!-padding-top-2 govuk-!-padding-left-0">
