PIC-2776 autosave notes

--- a/server/views/case-summary.njk
+++ b/server/views/case-summary.njk
@@ -21,7 +21,7 @@
 {% block javascripts %}
     {{ super() }}
     <script type="text/javascript" src="/javascripts/case-progress-{{ appVersion }}.min.js"/>
-{% endblock %}
+{% endblock %}}
 
 
 {% block message %}
