--- a/server/views/components/hearing-notes/template.njk
+++ b/server/views/components/hearing-notes/template.njk
@@ -1,33 +1,38 @@
 <div class="app-summary-card__body govuk-!-padding-top-0 govuk-!-padding-right-5 govuk-!-padding-left-5">
+    {% set draftNote = '' %}
 
     <table class="govuk-table">
         {% for previousNote in params.hearing.notes %}
-            <tr class="govuk-table__row">
-                <td class="govuk-table__cell govuk-!-padding-top-3 govuk-!-padding-bottom-2" id="previous-note-{{ previousNote.noteId }}">
-                    <div class="govuk-grid-row">
-                        <span class="govuk-grid-column-full">{{ previousNote.note }}</span>
-                    </div>
-                    <div class="govuk-grid-row govuk-!-margin-top-2 govuk-caption-m govuk-!-font-size-16 govuk-!-margin-bottom-3">
+            {% if previousNote.draft and previousNote.createdByUuid === params.currentUserUuid %}
+                {% set draftNote = previousNote.note %}
+            {% else %}
+                <tr class="govuk-table__row">
+                    <td class="govuk-table__cell govuk-!-padding-top-3 govuk-!-padding-bottom-2" id="previous-note-{{ previousNote.noteId }}">
+                        <div class="govuk-grid-row">
+                            <span class="govuk-grid-column-full">{{ previousNote.note }}</span>
+                        </div>
+                        <div class="govuk-grid-row govuk-!-margin-top-2 govuk-caption-m govuk-!-font-size-16 govuk-!-margin-bottom-3">
                         <span class="govuk-!-margin-left-3">{{ previousNote.author }} on {{ previousNote.created | caseCommentTimeFormat }}
-                             {% if previousNote.createdByUuid === params.currentUserUuid %}
+                            {% if previousNote.createdByUuid === params.currentUserUuid %}
                                 <a class="govuk-link govuk-!-margin-left-5" href="summary/notes/delete?targetHearingId={{ params.hearing.hearingId }}&noteId={{ previousNote.noteId }}">Delete</a>
-                             {% endif %}
+                            {% endif %}
                         </span>
-                    </div>
-                </td>
-            </tr>
+                        </div>
+                    </td>
+                </tr>
+            {% endif %}
         {% endfor %}
     </table>
     {% if params.enableHearingNotes %}
     <form id="save-notes-{{ params.hearing.hearingId }}" action="summary/notes" method="post">
 
-        <details class="govuk-details govuk-!-margin-bottom-0" data-module="govuk-details">
+        <details {{ 'open' if draftNote | length }} class="govuk-details govuk-!-margin-bottom-0" data-module="govuk-details">
             <summary class="govuk-details__summary govuk-!-margin-bottom-0 govuk-!-margin-top-2">
                 <span class="govuk-details__summary-text">Add a note</span>
             </summary>
             <div class="govuk-details__text govuk-!-padding-bottom-0">
                 <label class="govuk-label" for="note-box-{{ params.hearing.hearingId }}" type="hidden">Add note</label>
-                <textarea class="govuk-textarea case-notes" id="note-box-{{ params.hearing.hearingId }}" name="note" rows="5" aria-describedby="note-box"></textarea>
+                <textarea data-hearingid="{{ params.hearing.hearingId }}" class="govuk-textarea case-notes auto-save-text" id="note-box-{{ params.hearing.hearingId }}" name="note" rows="5" aria-describedby="note-box">{{ draftNote }}</textarea>
                 <button class="govuk-button case-comments-save-button" type="submit" data-module="govuk-button">Save</button>
                 <input type="hidden" name="hearingId" value="{{ params.hearing.hearingId }}"/>
             </div>
