--- a/server/views/case-summary.njk
+++ b/server/views/case-summary.njk
@@ -20,7 +20,8 @@
 
 {% block javascripts %}
     {{ super() }}
-    <script type="text/javascript" src="/javascripts/case-progress-{{ appVersion }}.min.js"/>
+{#    <script type="text/javascript" src="/javascripts/case-progress-{{ appVersion }}.min.js"/>#}
+    <script type="text/javascript" src="/javascripts/case-progress.js"></script>
 {% endblock %}
 
 
