PIC-2776 fix draft not being displayed

--- a/server/views/components/hearing-notes/template.njk
+++ b/server/views/components/hearing-notes/template.njk
@@ -4,7 +4,9 @@
     <table class="govuk-table">
         {% for previousNote in params.hearing.notes %}
             {% if previousNote.draft %}
-                {% set draftNote = previousNote.note if previousNote.createdByUuid === params.currentUserUuid %}
+                {% if previousNote.createdByUuid === params.currentUserUuid %}
+                    {% set draftNote = previousNote.note %}
+                {% endif %}
             {% else %}
                 <tr class="govuk-table__row">
                     <td class="govuk-table__cell govuk-!-padding-top-3 govuk-!-padding-bottom-2" id="previous-note-{{ previousNote.noteId }}">
