--- a/server/views/case-summary.njk
+++ b/server/views/case-summary.njk
@@ -20,8 +20,7 @@
 
 {% block javascripts %}
     {{ super() }}
-{#    <script type="text/javascript" src="/javascripts/case-progress-{{ appVersion }}.min.js"/>#}
-    <script type="text/javascript" src="/javascripts/case-progress.js"></script>
+    <script type="text/javascript" src="/javascripts/case-progress-{{ appVersion }}.min.js"/>
 {% endblock %}
 
 
