--- a/server/views/components/hearing-notes/template.njk
+++ b/server/views/components/hearing-notes/template.njk
@@ -1,10 +1,11 @@
-<div class="app-summary-card__body govuk-!-padding-top-0 govuk-!-padding-right-5 govuk-!-padding-left-5">
+<div class="app-summary-card__body govuk-!-padding-top-0 govuk-!-padding-right-3 govuk-!-padding-left-3">
     {% set draftNote = '' %}
 
     <table class="govuk-table">
         {% for previousNote in params.hearing.notes %}
+            {% set isUserNoteAuthor = previousNote.createdByUuid === params.currentUserUuid %}
             {% if previousNote.draft %}
-                {% if previousNote.createdByUuid === params.currentUserUuid %}
+                {% if isUserNoteAuthor %}
                     {% set draftNote = previousNote.note %}
                 {% endif %}
             {% else %}
@@ -19,27 +20,32 @@
                             </div>
                             <div class="govuk-grid-row govuk-!-margin-top-2 govuk-caption-m govuk-!-font-size-16 govuk-!-margin-bottom-3 hearing-note-links">
                                 <span class="govuk-!-margin-left-3">{{ previousNote.author }} on {{ previousNote.created | caseCommentTimeFormat }}
-                                    {#                            {% if previousNote.createdByUuid === params.currentUserUuid %} #}
+                                    {% if isUserNoteAuthor %}
                                         <a class="govuk-link govuk-!-margin-left-5 note-edit-link"
                                            href="#">Edit</a>
-                                        <a class="govuk-link govuk-!-margin-left-5"
+                                        <a class="govuk-link govuk-!-margin-left-5 note-delete-link"
                                            href="summary/notes/delete?targetHearingId={{ params.hearing.hearingId }}&noteId={{ previousNote.noteId }}">Delete</a>
-        {#                            {% endif %} #}
+                                    {% endif %}
                                 </span>
                             </div>
                         </div>
-                        <div hidden class="note-edit-container">
-                            <div class="govuk-grid-row">
-                                <div class="govuk-!-margin-right-2 govuk-!-margin-left-2">
-                                    <form>
+                        {% if isUserNoteAuthor %}
+                            <div hidden class="note-edit-container">
+                                <div class="govuk-grid-row">
+                                    <div class="govuk-!-margin-right-2 govuk-!-margin-left-2">
+                                        <form>
                                         <textarea
                                                 class="govuk-body govuk-textarea case-comments-comment-display case-notes-edit"
-                                                rows="5" data-hearingid="{{ params.hearing.hearingId }}" data-noteid="{{ previousNote.noteId }}"></textarea>
-                                        <button class="govuk-button case-comments-save-button hearing-note-edit-done" data-module="govuk-button">Save</button>
-                                    </form>
+                                                rows="5" data-hearingid="{{ params.hearing.hearingId }}"
+                                                data-noteid="{{ previousNote.noteId }}"></textarea>
+                                            <button class="govuk-button case-comments-save-button hearing-note-edit-done"
+                                                    data-module="govuk-button">Save
+                                            </button>
+                                        </form>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
+                        {% endif %}
                     </td>
                 </tr>
             {% endif %}
