:white_check_mark: Test passing. CSS updated

--- a/public/stylesheets/app/_case-progress-card.scss
+++ b/public/stylesheets/app/_case-progress-card.scss
@@ -60,8 +60,7 @@
   }
 
   .govuk-summary-list__row:last-child,
-  .govuk-summary-list__row:last-child > *,
-  .govuk-table__row:last-child .govuk-table__cell {
+  .govuk-summary-list__row:last-child > * {
     border-bottom: 0;
   }
 }
