💬 Update text in user guide

--- a/server/views/user-guide.njk
+++ b/server/views/user-guide.njk
@@ -77,7 +77,7 @@
       <h2 class="govuk-heading-m" id="ug-viewing-a-case-list">Viewing a case list</h2>
 
       <p class="govuk-body">The case list will show all cases due to be heard in a court on a particular day.</p>
-      <p class="govuk-body">You can see up to 7 working days ahead. Select a date on the date picker to jump to the case list for that day.
+      <p class="govuk-body">You can see up to 7 working days ahead and 6 working days in the past. Select a date on the date picker to jump to the case list for that day.
       </p>
 
       <h3 class="govuk-heading-s" id="ug-what-you-can-see-on-the-case-list">What you can see on the case list</h3>
@@ -133,6 +133,7 @@
         <li>details of when and where the case will be heard</li>
         <li>the offence and a brief summary</li>
         <li>the defendant's personal details - name, gender, date of birth, address and nationality</li>
+        <li>the timeline of the case’s hearings and when the next hearing is scheduled for</li>
       </ul>
 
       <p class="govuk-body">If a defendant has no probation record, you will only see the case summary information.</p>
